@@ -239,6 +239,7 @@ parameters:
 - added parameter <heuristics/nlp/nlpoptfile> to specify name of (NLP solver specific) option file
 - added parameter <heuristics/nlp/runalways> to specify that NLP solver should be run everytime the heuristic is called and a start candidate is available
 - added parameter <constraints/knapsack/dualpresolving> to switch dualpresolving on/off inside the knapsack constraint handler, default is TRUE
+- added parameter <lp/threads> to change the number of threads used to solve the LP relaxation (default is 0: automatic)
 
 SCIP version 1.2.0
 ===============
